--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 android:value="com.fancymonk.fancymonk.activity.LoginActivity" />
         </activity>
         <activity android:name=".activity.MenuActivity" />
-        <activity android:name=".OrderActivity" />
+        <activity android:name=".activity.OrderActivity" />
         <activity android:name=".activity.ConfirmActivity"></activity>
     </application>
 
