Added location activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fancymonk.fancymonk">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,9 +30,50 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.fancymonk.fancymonk.activity.LoginActivity" />
         </activity>
-        <activity android:name=".activity.MenuActivity" />
-        <activity android:name=".activity.OrderActivity" />
-        <activity android:name=".activity.ConfirmActivity"></activity>
+        <activity
+            android:name=".activity.MenuActivity"
+            android:parentActivityName=".activity.ListActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.fancymonk.fancymonk.activity.ListActivity" />
+        </activity>
+        <activity
+            android:name=".activity.OrderActivity"
+            android:parentActivityName=".activity.MenuActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.fancymonk.fancymonk.activity.MenuActivity" />
+        </activity>
+        <activity
+            android:name=".activity.ConfirmActivity"
+            android:parentActivityName=".activity.LocationActivity">
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.fancymonk.fancymonk.activity.LocationActivity" />
+        </activity>
+        <activity
+            android:name=".activity.LocationActivity"
+            android:parentActivityName=".activity.OrderActivity">
+
+
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.fancymonk.fancymonk.activity.OrderActivity" />
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAEgtYTfv0LSvwbGUj3TYVvIb2fUPaD-NE" />
     </application>
 
 </manifest>
