--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:palette-v7:25.0.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
 
     testCompile 'junit:junit:4.12'
 }
